# cpp-boilerplate

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt  PID-controller.cpp  PidController.cpp  main.cpp  virtualPID.cpp
include/: PidController.h  lib.h  lib.hpp  virtualPID.h
results/: Cpp-check  cppcheck  cpplint
test/: CMakeLists.txt  PidControllerTest.cpp  gmockStatic.h  main.cpp  mockvirtualPID.h
